[package]
name = "rustypod"
version = "0.0.0"
authors = ["John Ramsden <johnramsden@riseup.net>", "Joe Puthenkulam <joeputhenkulam@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
feed-rs = "0.3.0"
reqwest = { version ="0.10.6", features = ["blocking"] }
anyhow = "1.0.31"
thiserror = "1.0.20"
toml = "0.5.6"
serde = "1.0.113"
serde_derive = "1.0.113"
num_cpus = "1.13.0"
rayon = "1.3.1"
